# tap-duckdb

./: LICENSE  README.md  meltano.yml  pyproject.toml
tap_duckdb/: __init__.py  client.py  tap.py
tests/: test_core.py
