[tool.poetry]
name = "tap-duckdb"
version = "0.0.1"
description = "`tap-duckdb` is a Singer tap for DuckDB, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
keywords = [
    "ELT",
    "DuckDB",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
fs-s3fs = { version = "^1.1.1", optional = true }
singer-sdk = {path = "/Users/edgarramirez/Code/meltano/sdk", develop=true}
duckdb-engine = "^0.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
singer-sdk = {path = "/Users/edgarramirez/Code/meltano/sdk", develop=true, extras = ["testing"]}

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
plugins = "sqlmypy"

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_duckdb"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_duckdb"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-duckdb = 'tap_duckdb.tap:TapDuckDB.cli'
